5.4: AFC Verdicts Processor
