# api/client.events.swagger.yml
@@ -13,86 +13,77 @@ paths:
       description: It uses for generating events. Otherwise it doesn't.
       responses:
         '200':
-          description: OK
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
 
 components:
-
+  # noinspection YAMLSchemaValidation
   schemas:
 
     Event:
-      required: [ eventId, messageId, requestId, eventType ]
+      type: object
+      required: [eventType]
+      properties:
+        eventType:
+          type: string
       oneOf:
         - $ref: "#/components/schemas/NewMessageEvent"
         - $ref: "#/components/schemas/MessageSentEvent"
+        - $ref: "#/components/schemas/MessageBlockedEvent"
       discriminator:
         propertyName: eventType
 
-    NewMessageEvent:
-      required: [ eventId, messageId, requestId, eventType ]
+    DefaultEvent:
+      type: object
+      required: [ messageId, eventId, requestId, eventType ]
       properties:
-        authorId:
-          type: string
-          format: uuid
-          x-go-type: types.UserID
-          x-go-type-import:
-            path: "github.com/karasunokami/chat-service/internal/types"
-        body:
-          type: string
-        createdAt:
-          type: string
-          format: "date-time"
-        eventId:
-          type: string
-          format: uuid
-          x-go-type: types.EventID
-          x-go-type-import:
-            path: "github.com/karasunokami/chat-service/internal/types"
         eventType:
           type: string
-        isService:
-          type: boolean
-        messageId:
-          type: string
-          format: uuid
-          x-go-type: types.MessageID
-          x-go-type-import:
-            path: "github.com/karasunokami/chat-service/internal/types"
         requestId:
           type: string
           format: uuid
           x-go-type: types.RequestID
           x-go-type-import:
             path: "github.com/karasunokami/chat-service/internal/types"
+        messageId:
+          type: string
+          format: uuid
+          x-go-type: types.MessageID
+          x-go-type-import:
+            path: "github.com/karasunokami/chat-service/internal/types"
+        eventId:
+          type: string
+          format: uuid
+          x-go-type: types.EventID
+          x-go-type-import:
+            path: "github.com/karasunokami/chat-service/internal/types"
+
+    NewMessageEvent:
+      allOf:
+        - $ref: "#/components/schemas/DefaultEvent"
+        - type: object
+          required: [ body, createdAt, isService ]
+          properties:
+            authorId:
+              type: string
+              format: uuid
+              x-go-type: types.UserID
+              x-go-type-import:
+                path: "github.com/karasunokami/chat-service/internal/types"
+            body:
+              type: string
+            createdAt:
+              type: string
+              format: "date-time"
+            isService:
+              type: boolean
 
     MessageSentEvent:
-      required: [ eventId, messageId, requestId, eventType ]
-      properties:
-        eventType:
-          type: string
+      allOf:
+        - $ref: "#/components/schemas/DefaultEvent"
 
-        requestId:
-          type: string
-          format: uuid
-          x-go-type: types.RequestID
-          x-go-type-import:
-            path: "github.com/karasunokami/chat-service/internal/types"
-
-        eventId:
-          type: string
-          format: uuid
-          x-go-type: types.EventID
-          x-go-type-import:
-            path: "github.com/karasunokami/chat-service/internal/types"
-
-        messageId:
-          type: string
-          format: uuid
-          x-go-type: types.MessageID
-          x-go-type-import:
-            path: "github.com/karasunokami/chat-service/internal/types"
-
-# FIXME: Не забудь добавить новый контракт в debug server и Swagger UI.
+    MessageBlockedEvent:
+      allOf:
+        - $ref: "#/components/schemas/DefaultEvent"
